// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Search Snapshots Renders a collapsed search bar 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-1:focus {
  background-color: transparent;
}

.emotion-1:focus span .wd-icon-fill,
.emotion-1:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover:focus {
  background-color: transparent;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-1:active span .wd-icon-fill,
.emotion-1:focus:active span .wd-icon-fill,
.emotion-1:hover:active span .wd-icon-fill,
.emotion-1:active span .wd-icon-accent,
.emotion-1:focus:active span .wd-icon-accent,
.emotion-1:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:hover {
  background-color: transparent;
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: transparent;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-1:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-1:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

<button
  aria-label="Search"
  className="emotion-1 emotion-2"
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "marginLeft": "16px",
    }
  }
  type="submit"
>
  <span
    className="emotion-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</button>
`;

exports[`Header Search Snapshots Renders a search bar with a value 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  left: 8px;
  margin-right: -32px;
  margin-left: 0;
  padding: 0;
}

.emotion-2:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-2:disabled,
.emotion-2:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-2 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-2 span .wd-icon-fill,
.emotion-2 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-2:focus {
  background-color: transparent;
}

.emotion-2:focus span .wd-icon-fill,
.emotion-2:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover:focus {
  background-color: transparent;
}

.emotion-2:active,
.emotion-2:focus:active,
.emotion-2:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-2:active span .wd-icon-fill,
.emotion-2:focus:active span .wd-icon-fill,
.emotion-2:hover:active span .wd-icon-fill,
.emotion-2:active span .wd-icon-accent,
.emotion-2:focus:active span .wd-icon-accent,
.emotion-2:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:hover {
  background-color: transparent;
}

.emotion-2:hover span .wd-icon-fill,
.emotion-2:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:disabled,
.emotion-2:active:disabled,
.emotion-2:focus:disabled,
.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled span .wd-icon-fill,
.emotion-2:active:disabled span .wd-icon-fill,
.emotion-2:focus:disabled span .wd-icon-fill,
.emotion-2:hover:disabled span .wd-icon-fill,
.emotion-2:disabled span .wd-icon-accent,
.emotion-2:active:disabled span .wd-icon-accent,
.emotion-2:focus:disabled span .wd-icon-accent,
.emotion-2:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-2:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-2:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 48px;
  padding-right: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  height: 44px;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):hover {
  background: #e8ebed;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  margin-left: -40px;
  padding: 0;
  display: block;
}

.emotion-8:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-8:disabled,
.emotion-8:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-8 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-8 span .wd-icon-fill,
.emotion-8 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-8:focus {
  background-color: transparent;
}

.emotion-8:focus span .wd-icon-fill,
.emotion-8:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-8:hover:focus {
  background-color: transparent;
}

.emotion-8:active,
.emotion-8:focus:active,
.emotion-8:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-8:active span .wd-icon-fill,
.emotion-8:focus:active span .wd-icon-fill,
.emotion-8:hover:active span .wd-icon-fill,
.emotion-8:active span .wd-icon-accent,
.emotion-8:focus:active span .wd-icon-accent,
.emotion-8:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:hover {
  background-color: transparent;
}

.emotion-8:hover span .wd-icon-fill,
.emotion-8:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:disabled,
.emotion-8:active:disabled,
.emotion-8:focus:disabled,
.emotion-8:hover:disabled {
  background-color: transparent;
}

.emotion-8:disabled span .wd-icon-fill,
.emotion-8:active:disabled span .wd-icon-fill,
.emotion-8:focus:disabled span .wd-icon-fill,
.emotion-8:hover:disabled span .wd-icon-fill,
.emotion-8:disabled span .wd-icon-accent,
.emotion-8:active:disabled span .wd-icon-accent,
.emotion-8:focus:disabled span .wd-icon-accent,
.emotion-8:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-8:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-8:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  role="search"
>
  <button
    aria-label="Search"
    aria-pressed={false}
    className="emotion-1 emotion-2 emotion-3"
    onClick={[Function]}
    type="submit"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <input
    className="emotion-4 emotion-5"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    value="Hello World"
  />
  <button
    aria-label="Reset Search Input"
    aria-pressed={false}
    className="emotion-7 emotion-8 emotion-3"
    onClick={[Function]}
    type="reset"
    value="Hello World"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
</form>
`;

exports[`Header Search Snapshots Renders a search bar with a value 2`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  left: 8px;
  margin-right: -32px;
  margin-left: 0;
  padding: 0;
}

.emotion-2:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-2:disabled,
.emotion-2:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-2 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-2 span .wd-icon-fill,
.emotion-2 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-2:focus {
  background-color: transparent;
}

.emotion-2:focus span .wd-icon-fill,
.emotion-2:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover:focus {
  background-color: transparent;
}

.emotion-2:active,
.emotion-2:focus:active,
.emotion-2:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-2:active span .wd-icon-fill,
.emotion-2:focus:active span .wd-icon-fill,
.emotion-2:hover:active span .wd-icon-fill,
.emotion-2:active span .wd-icon-accent,
.emotion-2:focus:active span .wd-icon-accent,
.emotion-2:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:hover {
  background-color: transparent;
}

.emotion-2:hover span .wd-icon-fill,
.emotion-2:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:disabled,
.emotion-2:active:disabled,
.emotion-2:focus:disabled,
.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled span .wd-icon-fill,
.emotion-2:active:disabled span .wd-icon-fill,
.emotion-2:focus:disabled span .wd-icon-fill,
.emotion-2:hover:disabled span .wd-icon-fill,
.emotion-2:disabled span .wd-icon-accent,
.emotion-2:active:disabled span .wd-icon-accent,
.emotion-2:focus:disabled span .wd-icon-accent,
.emotion-2:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-2:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-2:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 48px;
  padding-right: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  height: 44px;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):hover {
  background: #e8ebed;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  margin-left: -40px;
  padding: 0;
  display: block;
}

.emotion-8:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-8:disabled,
.emotion-8:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-8 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-8 span .wd-icon-fill,
.emotion-8 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-8:focus {
  background-color: transparent;
}

.emotion-8:focus span .wd-icon-fill,
.emotion-8:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-8:hover:focus {
  background-color: transparent;
}

.emotion-8:active,
.emotion-8:focus:active,
.emotion-8:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-8:active span .wd-icon-fill,
.emotion-8:focus:active span .wd-icon-fill,
.emotion-8:hover:active span .wd-icon-fill,
.emotion-8:active span .wd-icon-accent,
.emotion-8:focus:active span .wd-icon-accent,
.emotion-8:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:hover {
  background-color: transparent;
}

.emotion-8:hover span .wd-icon-fill,
.emotion-8:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:disabled,
.emotion-8:active:disabled,
.emotion-8:focus:disabled,
.emotion-8:hover:disabled {
  background-color: transparent;
}

.emotion-8:disabled span .wd-icon-fill,
.emotion-8:active:disabled span .wd-icon-fill,
.emotion-8:focus:disabled span .wd-icon-fill,
.emotion-8:hover:disabled span .wd-icon-fill,
.emotion-8:disabled span .wd-icon-accent,
.emotion-8:active:disabled span .wd-icon-accent,
.emotion-8:focus:disabled span .wd-icon-accent,
.emotion-8:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-8:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-8:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  role="search"
>
  <button
    aria-label="Search"
    aria-pressed={false}
    className="emotion-1 emotion-2 emotion-3"
    onClick={[Function]}
    type="submit"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <input
    className="emotion-4 emotion-5"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    value="Hello World"
  />
  <button
    aria-label="Reset Search Input"
    aria-pressed={false}
    className="emotion-7 emotion-8 emotion-3"
    onClick={[Function]}
    type="reset"
    value="Hello World"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
</form>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with blue theme applied 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  left: 8px;
  margin-right: -32px;
  margin-left: 0;
  padding: 0;
}

.emotion-2:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-2:disabled,
.emotion-2:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-2 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-2 span .wd-icon-fill,
.emotion-2 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #ffffff;
}

.emotion-2:hover:focus {
  background-color: rgba(0,0,0,0.2);
}

.emotion-2:active,
.emotion-2:focus:active,
.emotion-2:hover:active {
  background-color: rgba(0,0,0,0.4);
}

.emotion-2:hover {
  background-color: rgba(0,0,0,0.2);
}

.emotion-2:hover span .wd-icon-fill,
.emotion-2:hover span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:disabled,
.emotion-2:active:disabled,
.emotion-2:focus:disabled,
.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled span .wd-icon-fill,
.emotion-2:active:disabled span .wd-icon-fill,
.emotion-2:focus:disabled span .wd-icon-fill,
.emotion-2:hover:disabled span .wd-icon-fill,
.emotion-2:disabled span .wd-icon-accent,
.emotion-2:active:disabled span .wd-icon-accent,
.emotion-2:focus:disabled span .wd-icon-accent,
.emotion-2:hover:disabled span .wd-icon-accent {
  fill: rgba(255,255,255,0.75);
}

.emotion-2:not([disabled]):focus {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

.emotion-2:not([disabled]):active {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 48px;
  padding-right: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  height: 44px;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: rgba(0,0,0,0.2);
  color: #ffffff;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #ffffff;
}

.emotion-4::-moz-placeholder {
  color: #ffffff;
}

.emotion-4:-ms-input-placeholder {
  color: #ffffff;
}

.emotion-4::placeholder {
  color: #ffffff;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  background: #ffffff;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  margin-left: -40px;
  padding: 0;
  display: none;
}

.emotion-8:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-8:disabled,
.emotion-8:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-8 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-8 span .wd-icon-fill,
.emotion-8 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-8:focus {
  background-color: transparent;
}

.emotion-8:focus span .wd-icon-fill,
.emotion-8:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-8:hover:focus {
  background-color: transparent;
}

.emotion-8:active,
.emotion-8:focus:active,
.emotion-8:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-8:active span .wd-icon-fill,
.emotion-8:focus:active span .wd-icon-fill,
.emotion-8:hover:active span .wd-icon-fill,
.emotion-8:active span .wd-icon-accent,
.emotion-8:focus:active span .wd-icon-accent,
.emotion-8:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:hover {
  background-color: transparent;
}

.emotion-8:hover span .wd-icon-fill,
.emotion-8:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:disabled,
.emotion-8:active:disabled,
.emotion-8:focus:disabled,
.emotion-8:hover:disabled {
  background-color: transparent;
}

.emotion-8:disabled span .wd-icon-fill,
.emotion-8:active:disabled span .wd-icon-fill,
.emotion-8:focus:disabled span .wd-icon-fill,
.emotion-8:hover:disabled span .wd-icon-fill,
.emotion-8:disabled span .wd-icon-accent,
.emotion-8:active:disabled span .wd-icon-accent,
.emotion-8:focus:disabled span .wd-icon-accent,
.emotion-8:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-8:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-8:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  role="search"
>
  <button
    aria-label="Search"
    aria-pressed={false}
    className="emotion-1 emotion-2 emotion-3"
    onClick={[Function]}
    type="submit"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <input
    className="emotion-4 emotion-5"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    value=""
  />
  <button
    aria-label="Reset Search Input"
    aria-pressed={false}
    className="emotion-7 emotion-8 emotion-3"
    onClick={[Function]}
    type="reset"
    value=""
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
</form>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with blue theme applied 2`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  left: 8px;
  margin-right: -32px;
  margin-left: 0;
  padding: 0;
}

.emotion-2:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-2:disabled,
.emotion-2:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-2 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-2 span .wd-icon-fill,
.emotion-2 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #ffffff;
}

.emotion-2:hover:focus {
  background-color: rgba(0,0,0,0.2);
}

.emotion-2:active,
.emotion-2:focus:active,
.emotion-2:hover:active {
  background-color: rgba(0,0,0,0.4);
}

.emotion-2:hover {
  background-color: rgba(0,0,0,0.2);
}

.emotion-2:hover span .wd-icon-fill,
.emotion-2:hover span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:disabled,
.emotion-2:active:disabled,
.emotion-2:focus:disabled,
.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled span .wd-icon-fill,
.emotion-2:active:disabled span .wd-icon-fill,
.emotion-2:focus:disabled span .wd-icon-fill,
.emotion-2:hover:disabled span .wd-icon-fill,
.emotion-2:disabled span .wd-icon-accent,
.emotion-2:active:disabled span .wd-icon-accent,
.emotion-2:focus:disabled span .wd-icon-accent,
.emotion-2:hover:disabled span .wd-icon-accent {
  fill: rgba(255,255,255,0.75);
}

.emotion-2:not([disabled]):focus {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

.emotion-2:not([disabled]):active {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 48px;
  padding-right: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  height: 44px;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: rgba(0,0,0,0.2);
  color: #ffffff;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #ffffff;
}

.emotion-4::-moz-placeholder {
  color: #ffffff;
}

.emotion-4:-ms-input-placeholder {
  color: #ffffff;
}

.emotion-4::placeholder {
  color: #ffffff;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  background: #ffffff;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  margin-left: -40px;
  padding: 0;
  display: none;
}

.emotion-8:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-8:disabled,
.emotion-8:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-8 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-8 span .wd-icon-fill,
.emotion-8 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-8:focus {
  background-color: transparent;
}

.emotion-8:focus span .wd-icon-fill,
.emotion-8:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-8:hover:focus {
  background-color: transparent;
}

.emotion-8:active,
.emotion-8:focus:active,
.emotion-8:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-8:active span .wd-icon-fill,
.emotion-8:focus:active span .wd-icon-fill,
.emotion-8:hover:active span .wd-icon-fill,
.emotion-8:active span .wd-icon-accent,
.emotion-8:focus:active span .wd-icon-accent,
.emotion-8:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:hover {
  background-color: transparent;
}

.emotion-8:hover span .wd-icon-fill,
.emotion-8:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:disabled,
.emotion-8:active:disabled,
.emotion-8:focus:disabled,
.emotion-8:hover:disabled {
  background-color: transparent;
}

.emotion-8:disabled span .wd-icon-fill,
.emotion-8:active:disabled span .wd-icon-fill,
.emotion-8:focus:disabled span .wd-icon-fill,
.emotion-8:hover:disabled span .wd-icon-fill,
.emotion-8:disabled span .wd-icon-accent,
.emotion-8:active:disabled span .wd-icon-accent,
.emotion-8:focus:disabled span .wd-icon-accent,
.emotion-8:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-8:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-8:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  role="search"
>
  <button
    aria-label="Search"
    aria-pressed={false}
    className="emotion-1 emotion-2 emotion-3"
    onClick={[Function]}
    type="submit"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <input
    className="emotion-4 emotion-5"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    value=""
  />
  <button
    aria-label="Reset Search Input"
    aria-pressed={false}
    className="emotion-7 emotion-8 emotion-3"
    onClick={[Function]}
    type="reset"
    value=""
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
</form>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with transparent theme applied 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  left: 8px;
  margin-right: -32px;
  margin-left: 0;
  padding: 0;
}

.emotion-2:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-2:disabled,
.emotion-2:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-2 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-2 span .wd-icon-fill,
.emotion-2 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #ffffff;
}

.emotion-2:hover:focus {
  background-color: rgba(0,0,0,0.2);
}

.emotion-2:active,
.emotion-2:focus:active,
.emotion-2:hover:active {
  background-color: rgba(0,0,0,0.4);
}

.emotion-2:hover {
  background-color: rgba(0,0,0,0.2);
}

.emotion-2:hover span .wd-icon-fill,
.emotion-2:hover span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:disabled,
.emotion-2:active:disabled,
.emotion-2:focus:disabled,
.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled span .wd-icon-fill,
.emotion-2:active:disabled span .wd-icon-fill,
.emotion-2:focus:disabled span .wd-icon-fill,
.emotion-2:hover:disabled span .wd-icon-fill,
.emotion-2:disabled span .wd-icon-accent,
.emotion-2:active:disabled span .wd-icon-accent,
.emotion-2:focus:disabled span .wd-icon-accent,
.emotion-2:hover:disabled span .wd-icon-accent {
  fill: rgba(255,255,255,0.75);
}

.emotion-2:not([disabled]):focus {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

.emotion-2:not([disabled]):active {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 48px;
  padding-right: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  height: 44px;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: rgba(0,0,0,0.2);
  color: #ffffff;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #ffffff;
}

.emotion-4::-moz-placeholder {
  color: #ffffff;
}

.emotion-4:-ms-input-placeholder {
  color: #ffffff;
}

.emotion-4::placeholder {
  color: #ffffff;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  background: #ffffff;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  margin-left: -40px;
  padding: 0;
  display: none;
}

.emotion-8:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-8:disabled,
.emotion-8:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-8 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-8 span .wd-icon-fill,
.emotion-8 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-8:focus {
  background-color: transparent;
}

.emotion-8:focus span .wd-icon-fill,
.emotion-8:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-8:hover:focus {
  background-color: transparent;
}

.emotion-8:active,
.emotion-8:focus:active,
.emotion-8:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-8:active span .wd-icon-fill,
.emotion-8:focus:active span .wd-icon-fill,
.emotion-8:hover:active span .wd-icon-fill,
.emotion-8:active span .wd-icon-accent,
.emotion-8:focus:active span .wd-icon-accent,
.emotion-8:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:hover {
  background-color: transparent;
}

.emotion-8:hover span .wd-icon-fill,
.emotion-8:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:disabled,
.emotion-8:active:disabled,
.emotion-8:focus:disabled,
.emotion-8:hover:disabled {
  background-color: transparent;
}

.emotion-8:disabled span .wd-icon-fill,
.emotion-8:active:disabled span .wd-icon-fill,
.emotion-8:focus:disabled span .wd-icon-fill,
.emotion-8:hover:disabled span .wd-icon-fill,
.emotion-8:disabled span .wd-icon-accent,
.emotion-8:active:disabled span .wd-icon-accent,
.emotion-8:focus:disabled span .wd-icon-accent,
.emotion-8:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-8:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-8:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  role="search"
>
  <button
    aria-label="Search"
    aria-pressed={false}
    className="emotion-1 emotion-2 emotion-3"
    onClick={[Function]}
    type="submit"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <input
    className="emotion-4 emotion-5"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    value=""
  />
  <button
    aria-label="Reset Search Input"
    aria-pressed={false}
    className="emotion-7 emotion-8 emotion-3"
    onClick={[Function]}
    type="reset"
    value=""
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
</form>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with transparent theme applied 2`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  left: 8px;
  margin-right: -32px;
  margin-left: 0;
  padding: 0;
}

.emotion-2:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-2:disabled,
.emotion-2:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-2 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-2 span .wd-icon-fill,
.emotion-2 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #ffffff;
}

.emotion-2:hover:focus {
  background-color: rgba(0,0,0,0.2);
}

.emotion-2:active,
.emotion-2:focus:active,
.emotion-2:hover:active {
  background-color: rgba(0,0,0,0.4);
}

.emotion-2:hover {
  background-color: rgba(0,0,0,0.2);
}

.emotion-2:hover span .wd-icon-fill,
.emotion-2:hover span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:disabled,
.emotion-2:active:disabled,
.emotion-2:focus:disabled,
.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled span .wd-icon-fill,
.emotion-2:active:disabled span .wd-icon-fill,
.emotion-2:focus:disabled span .wd-icon-fill,
.emotion-2:hover:disabled span .wd-icon-fill,
.emotion-2:disabled span .wd-icon-accent,
.emotion-2:active:disabled span .wd-icon-accent,
.emotion-2:focus:disabled span .wd-icon-accent,
.emotion-2:hover:disabled span .wd-icon-accent {
  fill: rgba(255,255,255,0.75);
}

.emotion-2:not([disabled]):focus {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

.emotion-2:not([disabled]):active {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 48px;
  padding-right: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  height: 44px;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: rgba(0,0,0,0.2);
  color: #ffffff;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #ffffff;
}

.emotion-4::-moz-placeholder {
  color: #ffffff;
}

.emotion-4:-ms-input-placeholder {
  color: #ffffff;
}

.emotion-4::placeholder {
  color: #ffffff;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  background: #ffffff;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  margin-left: -40px;
  padding: 0;
  display: none;
}

.emotion-8:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-8:disabled,
.emotion-8:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-8 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-8 span .wd-icon-fill,
.emotion-8 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-8:focus {
  background-color: transparent;
}

.emotion-8:focus span .wd-icon-fill,
.emotion-8:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-8:hover:focus {
  background-color: transparent;
}

.emotion-8:active,
.emotion-8:focus:active,
.emotion-8:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-8:active span .wd-icon-fill,
.emotion-8:focus:active span .wd-icon-fill,
.emotion-8:hover:active span .wd-icon-fill,
.emotion-8:active span .wd-icon-accent,
.emotion-8:focus:active span .wd-icon-accent,
.emotion-8:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:hover {
  background-color: transparent;
}

.emotion-8:hover span .wd-icon-fill,
.emotion-8:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:disabled,
.emotion-8:active:disabled,
.emotion-8:focus:disabled,
.emotion-8:hover:disabled {
  background-color: transparent;
}

.emotion-8:disabled span .wd-icon-fill,
.emotion-8:active:disabled span .wd-icon-fill,
.emotion-8:focus:disabled span .wd-icon-fill,
.emotion-8:hover:disabled span .wd-icon-fill,
.emotion-8:disabled span .wd-icon-accent,
.emotion-8:active:disabled span .wd-icon-accent,
.emotion-8:focus:disabled span .wd-icon-accent,
.emotion-8:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-8:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-8:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  role="search"
>
  <button
    aria-label="Search"
    aria-pressed={false}
    className="emotion-1 emotion-2 emotion-3"
    onClick={[Function]}
    type="submit"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <input
    className="emotion-4 emotion-5"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    value=""
  />
  <button
    aria-label="Reset Search Input"
    aria-pressed={false}
    className="emotion-7 emotion-8 emotion-3"
    onClick={[Function]}
    type="reset"
    value=""
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
</form>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with white theme applied 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  left: 8px;
  margin-right: -32px;
  margin-left: 0;
  padding: 0;
}

.emotion-2:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-2:disabled,
.emotion-2:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-2 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-2 span .wd-icon-fill,
.emotion-2 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-2:focus {
  background-color: transparent;
}

.emotion-2:focus span .wd-icon-fill,
.emotion-2:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover:focus {
  background-color: transparent;
}

.emotion-2:active,
.emotion-2:focus:active,
.emotion-2:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-2:active span .wd-icon-fill,
.emotion-2:focus:active span .wd-icon-fill,
.emotion-2:hover:active span .wd-icon-fill,
.emotion-2:active span .wd-icon-accent,
.emotion-2:focus:active span .wd-icon-accent,
.emotion-2:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:hover {
  background-color: transparent;
}

.emotion-2:hover span .wd-icon-fill,
.emotion-2:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:disabled,
.emotion-2:active:disabled,
.emotion-2:focus:disabled,
.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled span .wd-icon-fill,
.emotion-2:active:disabled span .wd-icon-fill,
.emotion-2:focus:disabled span .wd-icon-fill,
.emotion-2:hover:disabled span .wd-icon-fill,
.emotion-2:disabled span .wd-icon-accent,
.emotion-2:active:disabled span .wd-icon-accent,
.emotion-2:focus:disabled span .wd-icon-accent,
.emotion-2:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-2:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-2:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 48px;
  padding-right: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  height: 44px;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):hover {
  background: #e8ebed;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  margin-left: -40px;
  padding: 0;
  display: none;
}

.emotion-8:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-8:disabled,
.emotion-8:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-8 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-8 span .wd-icon-fill,
.emotion-8 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-8:focus {
  background-color: transparent;
}

.emotion-8:focus span .wd-icon-fill,
.emotion-8:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-8:hover:focus {
  background-color: transparent;
}

.emotion-8:active,
.emotion-8:focus:active,
.emotion-8:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-8:active span .wd-icon-fill,
.emotion-8:focus:active span .wd-icon-fill,
.emotion-8:hover:active span .wd-icon-fill,
.emotion-8:active span .wd-icon-accent,
.emotion-8:focus:active span .wd-icon-accent,
.emotion-8:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:hover {
  background-color: transparent;
}

.emotion-8:hover span .wd-icon-fill,
.emotion-8:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:disabled,
.emotion-8:active:disabled,
.emotion-8:focus:disabled,
.emotion-8:hover:disabled {
  background-color: transparent;
}

.emotion-8:disabled span .wd-icon-fill,
.emotion-8:active:disabled span .wd-icon-fill,
.emotion-8:focus:disabled span .wd-icon-fill,
.emotion-8:hover:disabled span .wd-icon-fill,
.emotion-8:disabled span .wd-icon-accent,
.emotion-8:active:disabled span .wd-icon-accent,
.emotion-8:focus:disabled span .wd-icon-accent,
.emotion-8:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-8:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-8:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  role="search"
>
  <button
    aria-label="Search"
    aria-pressed={false}
    className="emotion-1 emotion-2 emotion-3"
    onClick={[Function]}
    type="submit"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <input
    className="emotion-4 emotion-5"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    value=""
  />
  <button
    aria-label="Reset Search Input"
    aria-pressed={false}
    className="emotion-7 emotion-8 emotion-3"
    onClick={[Function]}
    type="reset"
    value=""
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
</form>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with white theme applied 2`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  left: 8px;
  margin-right: -32px;
  margin-left: 0;
  padding: 0;
}

.emotion-2:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-2:disabled,
.emotion-2:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-2 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-2 span .wd-icon-fill,
.emotion-2 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-2:focus {
  background-color: transparent;
}

.emotion-2:focus span .wd-icon-fill,
.emotion-2:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover:focus {
  background-color: transparent;
}

.emotion-2:active,
.emotion-2:focus:active,
.emotion-2:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-2:active span .wd-icon-fill,
.emotion-2:focus:active span .wd-icon-fill,
.emotion-2:hover:active span .wd-icon-fill,
.emotion-2:active span .wd-icon-accent,
.emotion-2:focus:active span .wd-icon-accent,
.emotion-2:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:hover {
  background-color: transparent;
}

.emotion-2:hover span .wd-icon-fill,
.emotion-2:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:disabled,
.emotion-2:active:disabled,
.emotion-2:focus:disabled,
.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled span .wd-icon-fill,
.emotion-2:active:disabled span .wd-icon-fill,
.emotion-2:focus:disabled span .wd-icon-fill,
.emotion-2:hover:disabled span .wd-icon-fill,
.emotion-2:disabled span .wd-icon-accent,
.emotion-2:active:disabled span .wd-icon-accent,
.emotion-2:focus:disabled span .wd-icon-accent,
.emotion-2:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-2:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-2:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 48px;
  padding-right: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  height: 44px;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):hover {
  background: #e8ebed;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
  width: 32px;
  height: 32px;
  margin-left: -40px;
  padding: 0;
  display: none;
}

.emotion-8:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-8:disabled,
.emotion-8:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-8 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-8 span .wd-icon-fill,
.emotion-8 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-8:focus {
  background-color: transparent;
}

.emotion-8:focus span .wd-icon-fill,
.emotion-8:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-8:hover:focus {
  background-color: transparent;
}

.emotion-8:active,
.emotion-8:focus:active,
.emotion-8:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-8:active span .wd-icon-fill,
.emotion-8:focus:active span .wd-icon-fill,
.emotion-8:hover:active span .wd-icon-fill,
.emotion-8:active span .wd-icon-accent,
.emotion-8:focus:active span .wd-icon-accent,
.emotion-8:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:hover {
  background-color: transparent;
}

.emotion-8:hover span .wd-icon-fill,
.emotion-8:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-8:disabled,
.emotion-8:active:disabled,
.emotion-8:focus:disabled,
.emotion-8:hover:disabled {
  background-color: transparent;
}

.emotion-8:disabled span .wd-icon-fill,
.emotion-8:active:disabled span .wd-icon-fill,
.emotion-8:focus:disabled span .wd-icon-fill,
.emotion-8:hover:disabled span .wd-icon-fill,
.emotion-8:disabled span .wd-icon-accent,
.emotion-8:active:disabled span .wd-icon-accent,
.emotion-8:focus:disabled span .wd-icon-accent,
.emotion-8:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-8:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-8:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  role="search"
>
  <button
    aria-label="Search"
    aria-pressed={false}
    className="emotion-1 emotion-2 emotion-3"
    onClick={[Function]}
    type="submit"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <input
    className="emotion-4 emotion-5"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    value=""
  />
  <button
    aria-label="Reset Search Input"
    aria-pressed={false}
    className="emotion-7 emotion-8 emotion-3"
    onClick={[Function]}
    type="reset"
    value=""
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
</form>
`;

exports[`Header Search Snapshots renders themed, collapsed search bars: <Search /> with blue theme applied 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  width: 40px;
  height: 40px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #ffffff;
}

.emotion-1:hover:focus {
  background-color: rgba(0,0,0,0.2);
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: rgba(0,0,0,0.4);
}

.emotion-1:hover {
  background-color: rgba(0,0,0,0.2);
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: transparent;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: rgba(255,255,255,0.75);
}

.emotion-1:not([disabled]):focus {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

.emotion-1:not([disabled]):active {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

<button
  aria-label="Search"
  className="emotion-1 emotion-2"
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "marginLeft": "16px",
    }
  }
  type="submit"
>
  <span
    className="emotion-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</button>
`;

exports[`Header Search Snapshots renders themed, collapsed search bars: <Search /> with transparent theme applied 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  width: 40px;
  height: 40px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #ffffff;
}

.emotion-1:hover:focus {
  background-color: rgba(0,0,0,0.2);
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: rgba(0,0,0,0.4);
}

.emotion-1:hover {
  background-color: rgba(0,0,0,0.2);
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: transparent;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: rgba(255,255,255,0.75);
}

.emotion-1:not([disabled]):focus {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

.emotion-1:not([disabled]):active {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

<button
  aria-label="Search"
  className="emotion-1 emotion-2"
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "marginLeft": "16px",
    }
  }
  type="submit"
>
  <span
    className="emotion-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</button>
`;

exports[`Header Search Snapshots renders themed, collapsed search bars: <Search /> with white theme applied 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  margin: -8px;
  width: 40px;
  height: 40px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-1:focus {
  background-color: transparent;
}

.emotion-1:focus span .wd-icon-fill,
.emotion-1:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover:focus {
  background-color: transparent;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: transparent;
  border-color: transparent;
}

.emotion-1:active span .wd-icon-fill,
.emotion-1:focus:active span .wd-icon-fill,
.emotion-1:hover:active span .wd-icon-fill,
.emotion-1:active span .wd-icon-accent,
.emotion-1:focus:active span .wd-icon-accent,
.emotion-1:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:hover {
  background-color: transparent;
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: transparent;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-1:not([disabled]):focus {
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-1:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-os2b9x 100ms;
  animation: animation-os2b9x 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

<button
  aria-label="Search"
  className="emotion-1 emotion-2"
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "marginLeft": "16px",
    }
  }
  type="submit"
>
  <span
    className="emotion-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</button>
`;
